--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Calendario!</title>
+    <title>Calendario! de Prueba</title>
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
   </body>
