--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Calendario! de Prueba</title>
-    <script src="main.js"></script>
+
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <script src="main.js" defer></script>
   </body>
 </html>
