--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Calendario! de Prueba</title>
+    <title>Calendario!</title>
 
     <link rel="stylesheet" href="styles.css">
   </head>
